@@ -1,5 +1,9 @@
 2015-03-04  Marcus Shawcroft  <marcus.shawcroft@arm.com>
 
+	* elfnn-aarch64.c (elfNN_aarch64_size_stubs): Remove bfd_indx.
+
+2015-03-23  Marcus Shawcroft  <marcus.shawcroft@arm.com>
+
 	* elfnn-aarch64.c (aarch64_erratum_835769_fixes)
 	(num_aarch64_erratum_835769_fixes): Remove.
 	(elfNN_aarch64_size_stubs): Remove assignments to above.
